syntax = "proto3";

package org.federation;

import "grpc/federation/federation.proto";

option go_package = "example/federation;federation";

option (grpc.federation.file)= {
  import: ["user/user.proto"]
};

service FederationService {
  option (grpc.federation.service) = {};
  rpc Get(GetRequest) returns (GetResponse) {};
  rpc GetNoValue(GetNoValueRequest) returns (GetNoValueResponse) {};
}

message GetRequest {}

message GetResponse {
  option (grpc.federation.message) = {
    def {
      name: "sel"
      message {
        name: "UserSelection"
        args { name: "value", by: "'foo'" }
      }
    }
    def { name: "msg_sel" message { name: "MessageSelection" } }
    def { name: "nested_msg" message { name: "NestedMessageSelection.Nest" }}
  };
  User user = 1 [(grpc.federation.field).by = "sel.user"];
  string msg = 2 [(grpc.federation.field).by = "msg_sel.message"];
  NestedMessageSelection.Nest nested_msg = 3 [(grpc.federation.field).by = "nested_msg"];
}

message GetNoValueRequest {}

message GetNoValueResponse {
  option (grpc.federation.message) = {
    def { name: "no_value_sel" message { name: "NoValueSelection" } }
  };
  M no_value = 1 [(grpc.federation.field).by = "no_value_sel.no_value"];
}

message UserSelection {
  oneof user {
    User user_a = 1 [
      (grpc.federation.field).oneof = {
        if: "false"
        def {
          name: "ua"
          message {
            name: "User"
            args [
             { name: "user_id", by: "'a'" },
             { name: "foo" by: "0" },
             { name: "bar" by: "'hello'"}
            ]
          }
        }
        by: "ua"
      }
    ];

    User user_b = 2 [
      (grpc.federation.field).oneof = {
        if: "true"
        def {
          name: "ub"
          message {
            name: "User"
            args [
              { name: "user_id", by: "'b'" },
              { name: "foo" by: "0" },
              { name: "bar" by: "'hello'"}
            ]
          }
        }
        by: "ub"
      }
    ];

    User user_c = 3 [
      (grpc.federation.field).oneof = {
        default: true
        def {
          name: "uc"
          message {
            name: "User"
            args [
              { name: "user_id", by: "$.value" },
              { name: "foo" by: "0" },
              { name: "bar" by: "'hello'"}
            ]
          }
        }
        by: "uc"
      }
    ];
  }
}

message MessageSelection {
  oneof message {
    string msg_a = 1 [
      (grpc.federation.field).oneof = {
        if: "false"
        by: "'aaa'"
      }
    ];
    string msg_b = 2 [
      (grpc.federation.field).oneof = {
        if: "true"
        by: "'bbb'"
      }
    ];
    string msg_c = 3 [
      (grpc.federation.field).oneof = {
        default: true
        by: "'ccc'"
      }
    ];
  }
}

message NoValueSelection {
  oneof no_value {
    M m_a = 1 [
      (grpc.federation.field).oneof = {
        if: "false"
        by: "M{value: 'a'}"
      }
    ];
    M m_b = 2 [
      (grpc.federation.field).oneof = {
        if: "false"
        by: "M{value: 'b'}"
      }
    ];
  }
}

message NestedMessageSelection {
  message Nest {
    oneof value {
      int64 int = 1 [(grpc.federation.field).oneof = {
        if: "true"
        by: "1"
      }];
      string text = 2 [(grpc.federation.field).oneof = {
        if: "false"
        by: "'foo'"
      }];
    }
  }
}

message M {
  string value = 1 [(grpc.federation.field).by = "'foo'"];
}

message User {
  option (grpc.federation.message) = {
    def {
      call {
        method: "user.UserService/GetUser"
        request [
          { field: "id", by: "$.user_id" },
          { field: "foo" by: "$.foo" if: "$.foo != 0" },
          { field: "bar" by: "$.bar" if: "$.bar != ''" }
        ]
      }
    }
  };

  string id = 1 [(grpc.federation.field).by = "$.user_id"];
}
